<resources>
    <string name="app_name">Quizcuy</string>
    <string name="judulquiz">JudulQuiz</string>
    <string name="kelas">Kelas</string>
    <string name="jumlah_soal">Jumlah soal</string>
    <string name="na">NA</string>
    <string name="mulai">Mulai!</string>
    <string name="quizcuy">Quizcuy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="soal_ke">Soal ke:</string>
    <string name="text_soal">Text Soal</string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="verify_answer">verify answer</string>
    <string name="soal_berikutnya">Soal Berikutnya</string>
    <string name="kembali">Kembali</string>
    <string name="hasil">Hasil:</string>
    <string name="jawaban_salah">Jawaban Salah :</string>
    <string name="tidak_terjawab">Tidak Terjawab :</string>
    <string name="jawaban_benar">Jawaban Benar :</string>
    <string name="berhasil_daftar">Berhasil Daftar!</string>
    <string name="quiz_1">Quiz 1</string>
    <string name="_30">30</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="peringkat">Peringkat</string>
    <string name="quiz">Quiz</string>
    <string name="logout">Logout</string>
</resources>